force-app/main/default/objects/Query__c/Query__c.object-meta.xml
<CustomObject>
    <label>Query</label>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>