force-app/main/default/objects/Query__c/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Enter comma seperated fields value for the object</description>
    <inlineHelpText>Enter comma seperated fields value for the object</inlineHelpText>
    <label>Fields</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>