force-app/main/default/objects/Query__c/fields/Fuctional_number__c.field-meta.xml
<CustomField>
    <fullName>Fuctional_number__c</fullName>
    <label>Fuctional number</label>
    <type>AutoNumber</type>
</CustomField>