force-app/main/default/objects/Query__c/fields/Query_Name__c.field-meta.xml
<CustomField>
    <fullName>Query_Name__c</fullName>
    <description>Name of the query</description>
    <label>Query Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>