force-app/main/default/objects/Query__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>query to be present in which section</description>
    <label>Section</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Queries</relationshipLabel>
    <relationshipName>Queries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>