force-app/main/default/objects/Query__c/fields/Show_DataTable__c.field-meta.xml
<CustomField>
    <fullName>Show_DataTable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>to show the data table field value</description>
    <inlineHelpText>check to show the data table field value</inlineHelpText>
    <label>Show DataTable</label>
    <type>Checkbox</type>
</CustomField>